[metadata]
name = pychan
author = cooperwalbrun
author_email = mail@cooperwalbrun.io
description = A Python library for interacting with 4chan in a programmatically-friendly way.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cooperwalbrun/pychan
platforms = any
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = =src
python_requires = >=3.9,<4
install_requires =
    beautifulsoup4>=4.11.1,<5
    importlib-metadata
    pyrate-limiter>=2.8,<3
    requests>=2.28,<3
    types-beautifulsoup4>=4.11,<5
    types-requests>=2.28,<3

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
testing =
    mypy
    pytest
    pytest-cov
    pytest-mock
    responses
    tox
github_actions =
    # Interpolation via %()s works because setuptools uses this: https://docs.python.org/3/library/configparser.html#configparser.BasicInterpolation
    %(testing)s
    tox-gh-actions
development =
    %(testing)s
    yapf

[test]
# The line below tells setuptools whether to install everything listed under options.extras_require when you issue "python setup.py test"
extras = False

[tool:pytest]
addopts = --cov -p no:warnings
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = sdist bdist_wheel

[bdist_wheel]
# We do not support functionality on Python versions other than the ones specified in this file
universal = 0

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
